<?xml version="1.0"?>

<resources>

    <string name="app_name">GADS 2020</string>

    <string name="learning_leaders">Learning Leaders</string>

    <string name="skill_iq_leaders">Skill IQ Leaders</string>

    <string name="leaderboard_caps">LEADERBOARD</string>

    <string name="submit">Submit</string>

    <string name="learner_name">Learner name</string>

    <string name="learning_hours">Learning hours</string>

    <string name="skill_iq_leaders_description">Skill IQ Description</string>

    <string name="skill_iq_learner_name">SkillIQ Learner name</string>

    <string name="project_submission">Project Submission</string>

    <string name="appbar_logo">AppBar Logo</string>

    <string name="email_address">Email Address</string>

    <string name="first_name">First Name</string>

    <string name="last_name">Last Name</string>

    <string name="project_on_github_link">Project on GITHUB (link)</string>

    <string name="yes">Yes</string>

    <string name="are_you_sure">Are you sure</string>

    <string name="submission_successful">Submission Successful</string>

    <string name="question_mark">\?</string>

    <string name="submission_not_successful">Submission not Successful</string>

</resources>
